projects.css
.project-card{
    display: grid;
    padding: 12px;
    margin-block: 4rem;
    margin-inline:auto;
    gap: 16px;
}

.project-card img{
    max-width: 400px;
    width: 100%;
    margin-inline:auto;
    border-radius: 4px;
}
.project-info{
    background-color: var(--element-dark-bg-color,grey);
    padding: 16px;
    border-radius: 8px;
}
.project-info h1{
    margin-top: 8px;
    text-align: center;
}
.project-info span{
    opacity: 0.8;
}
.project-stack{
    margin-top:8px;
    padding: 8px 0;
    display: flex;
    column-gap: 8px;
    justify-content: flex-start;
}
.project-stack span{
    background-color: var(--element-light-bg-color) ;
    padding: 4px 8px;
    border-radius: 2px;
}
.project-link{
    background-color: var(--element-dark-bg-color);
    padding: 12px;
    display: flex;
    justify-content: center;
    border-radius: 4px;
    text-decoration: none;
    color: inherit;
}
@media (max-width:400px)
{
    .project-card{
        padding: 4px;
    }
    .project-info{
      padding: 4px;
    }
}
@media (min-width:400px) and (max-width:800px)
{
    .project-card{
        max-width: 400px;
        margin-inline: auto;
    }
}
@media (min-width:801px)
{
    .project-card{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 0.2fr;
        row-gap: 10px;
    }
    .project-card img{
        grid-row: 1/3;
        max-width: 600px;
        min-height: 300px;
        object-fit: contain;
    }
    .project-info{
        margin-block: 0px;
    }
    .project-info span{
        font-size: 0.9rem;
    }

}

@media (min-width:1000px)
{
    .project-stack span{
        margin-top: 24px;
    }
}

